# systemlink-cli

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CLI_CONSISTENCY_ANALYSIS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  RESOURCE_MODEL_ANALYSIS.md  app-manifest.schema.json  layout-patterns.mdx  pr-description.md  pyproject.toml  renovate.json  sitecustomize.py  test-output.json  test_error_output.py  test_workspace_filter.py  zaudit.json
.github/: AGENTS.md  copilot-instructions.md  no-heredoc.instructions.md
WorkflowCLI/: CommandLineCodeAnalysisDictionary.xml  Directory.Build.targets  WorkflowCLI.sln
dff-editor/: README.md  editor.js  index.html
docs/: CONFIG_FILE_PLAN.md  DFF_WEB_EDITOR.md  EXAMPLE_ARCHITECTURE.md  EXAMPLE_CONFIG_PLAN.md  Exercise 7-1 - Create and Schedule Test Plans - reviewed.md  OPENAPI_RESOURCE_RELATIONSHIPS_VERIFIED.md  OPENAPI_VERIFICATION_ANALYSIS.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  Proposed 10 New Questions  RESOURCE_MODEL.md  RESOURCE_MODEL_UPDATES_SUMMARY.md  asset-command-proposal.md  conf.py  dataframe-command-proposal.md  evaluation-queries.txt  feed-commands-plan.md  index.rst  mcp-server.md  niapm-2.json  nisysmgmt.json  nitestmonitor-v2.yml  release.md  semantic-release.md  shell-completion.md  skills.md  slcli-workflow-analysis.md  state-command-proposal.md  system-command-proposal.md  systemlink_enterprise_user_manual_2025-12-18-08-28-30.md  testmonitor-command-proposal.md  winget-phase1.md
newsfragments/: +towncrier.patch.md  120.minor.md  121.minor.md  123.doc.md  125.doc.md  126.minor.md  133.patch.md  134.minor.md  134.patch.md  136.minor.md  137.misc.md  139.doc.md  140.patch.md  141.patch.md  142.misc.md  143.doc.md  146.doc.md  146.patch.md  147.misc.md  148.doc.md  149.doc.md  152.patch.md  153.patch.md  README.md  add-sca-scanning.misc.md  auth-source-visibility.patch.md  config-view-info-separation.patch.md  dependency-bot-towncrier.misc.md  deps-black-26-x-lockfile.patch.md  deps-debug-renovate-pipeline-failures.patch.md  deps-lxml-6-x-lockfile.patch.md  deps-major-github-actions.patch.md  deps-mcp-1-x-lockfile.patch.md  deps-mypy-2-x-lockfile.patch.md  deps-pyinstaller-6-x-lockfile.patch.md  deps-pytest-9-x-lockfile.patch.md  deps-python-multipart-0-x-lockfile.patch.md  deps-python-runtime-dependencies.patch.md  deps-security-alerts.patch.md  deps-security-refresh.patch.md  (+17 more)
openapi-schemas/: genaimodels.json  nialarm.json  niapm-2.json  niapp.yaml  niauth.yaml  nicomments.json  nidataframe.json  nidynamicformfields-2.json  nifeed.json  nifile.yaml  nilocation.json  ninotebook.yaml  ninotification.json  nirepo.json  niresourcemanagement.json  niroutine-2-updated.json  niroutine-2.json  niroutineexecutormanager.json  niroutinemanager.json  nispec.json  nisysmgmt.json  nisystemsstate.json  nitag-2.yaml  nitaghistorian.yaml  nitestmonitor-v2.yml  niuser.yaml  niuserdata.json  niworkitem.json  niworkorder-3.json  niworkorder.json  v1-ninbartifact-2.json  v1-ninbexecution-3.json
scripts/: __init__.py  build_chocolatey.py  build_homebrew.py  build_pyinstaller.py  build_scoop.py  create_spec_template.py  enrich_sbom.py  entitlements.plist  homebrew-slcli.rb.j2  install_completion.py  lint.py  scoop-slcli.json.j2  setup_e2e.py  smoke_test_webapp.py  styleguide.py  towncrier_release.py  update_version.py  write_renovate_towncrier_fragment.py
site/: commands.html  getting-started.html  index.html  style.css  workflows.html
slcli/: __init__.py  __main__.py  _version.py  asset_click.py  cli_formatters.py  cli_utils.py  comment_click.py  completion_click.py  config.py  config_click.py  dashboard_click.py  dataframe_click.py  dff_click.py  dff_decorators.py  example_click.py  example_loader.py  example_provisioner.py  feed_click.py  file_click.py  function_click.py  function_templates.py  main.py  mcp_click.py  mcp_reachability.py  mcp_server.py  notebook_click.py  platform.py  policy_click.py  policy_utils.py  (+25 more)
(+253 files in other folders)
