[tool.poetry]
name = "slcli"
version = "0.1.0"
description = "SystemLink Integrator CLI - cross-platform CLI for SystemLink workflows and templates."
authors = ["Fred Visser <fred.visser@emerson.com>"]


[tool.poetry.scripts]
slcli = "slcli.__main__:cli"

[tool.poetry.dependencies]
python = ">=3.11.1,<3.14"
# cli
click = ">=7.1.2"
keyring = "^25.6.0"
requests = "^2.32.4"
tabulate = "^0.9.0"
nisystemlink-clients = "^2.16.0"

[tool.poetry.group.dev.dependencies]
# Lint
ni-python-styleguide = ">=0.4.3"
cyclonedx-bom = "^5.0.0"

# Type checking
mypy = ">=1.0"

# Test
pytest = ">=7.0"
pytest-cov = ">=3.0"
pyinstaller = "^6.14.2"

[tool.pytest.ini_options]
addopts = "--cov slcli --strict-markers --doctest-modules"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.8"
files = "**/*.py"
disallow_untyped_defs = true
warn_unused_configs = true
namespace_packages = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
